# washing-machine

./: .gitignore  CMakeLists.txt  README.md
config/: wash_modes.json
docs/: HLD.md  LLD.md
docs/diagrams/: state_machine.drawio
include/: CLI.hpp  ConfigManager.hpp  DoorSystem.hpp  Event.hpp  EventEngine.hpp  MotorSystem.hpp  StateMachine.hpp  Types.hpp  WashMode.hpp  WashingMachine.hpp  WaterSystem.hpp
src/: CLI.cpp  ConfigManager.cpp  DoorSystem.cpp  EventEngine.cpp  MotorSystem.cpp  StateMachine.cpp  WashingMachine.cpp  WaterSystem.cpp  main.cpp
tests/: CMakeLists.txt  test_door_system.cpp  test_emergency.cpp  test_safety_interlocks.cpp  test_state_machine.cpp  test_water_system.cpp
